form file fix on ios, fix mobile header on ios, fix google auth fail logging

--- a/public/javascript/zMobileHeader.css
+++ b/public/javascript/zMobileHeader.css
@@ -113,7 +113,9 @@
 .z-mobile-header .z-mobile-menu.open {
 	opacity: 1;
 	right: 0;
+	padding-bottom:50px;
 }
+
 .z-mobile-header-overlay{
 	display:none; 
 }
